начал делать прайсы. подключил табы bootstrap

--- a/app/sass/__variables.sass
+++ b/app/sass/__variables.sass
@@ -1,3 +1,16 @@
 $main-color: #0da27e
+$hamburger-layer-color: $main-color
 
+//--bootstrap variables
+$table-border-width: 1px
+$table-hover-bg: rgba($main-color,.2)
+
+$nav-tabs-border-width: 1px
+$nav-tabs-border-color: $main-color
+$nav-tabs-border-radius: 0px
+$nav-tabs-link-active-bg: $main-color
+$nav-link-padding-x: 1.5rem
+$nav-tabs-link-hover-border-color: rgba($main-color, .2)
+
+$transition-fade: opacity .3s linear
 
