центровка кнопки шорткод

--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1893,6 +1893,9 @@ body
     text-decoration: none
     &:hover
       color: #555555
+  a.button
+    margin-top: 20px
+    margin-bottom: 20px
   blockquote
     @extend .review__caption
     @extend .review__text
