--- a/app/sass/slick-theme.scss
+++ b/app/sass/slick-theme.scss
@@ -22,182 +22,186 @@ $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
 
 @function slick-image-url($url) {
-    @if function-exists(image-url) {
-        @return image-url($url);
-    }
-    @else {
-        @return url($slick-loader-path + $url);
-    }
+  @if function-exists(image-url) {
+    @return image-url($url);
+  } @else {
+    @return url($slick-loader-path + $url);
+  }
 }
 
 @function slick-font-url($url) {
-    @if function-exists(font-url) {
-        @return font-url($url);
-    }
-    @else {
-        @return url($slick-font-path + $url);
-    }
+  @if function-exists(font-url) {
+    @return font-url($url);
+  } @else {
+    @return url($slick-font-path + $url);
+  }
 }
 
 /* Slider */
 
 .slick-list {
-    .slick-loading & {
-        background: #fff slick-image-url("../images/ajax-loader.gif") center center no-repeat;
-    }
+  .slick-loading & {
+    background: #fff slick-image-url("../images/ajax-loader.gif") center center no-repeat;
+  }
 }
 
 /* Icons */
 @if $slick-font-family == "slick" {
-    @font-face {
-        font-family: "slick";
-        src: slick-font-url("slick.eot");
-        src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
-        font-weight: normal;
-        font-style: normal;
-    }
+  @font-face {
+    font-family: "slick";
+    src: slick-font-url("slick.eot");
+    src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
+    font-weight: normal;
+    font-style: normal;
+  }
 }
 
 /* Arrows */
 
 button.slick-prev,
 button.slick-next {
-    position: absolute;
-    top: 50%;
-    z-index: 2;
-    display: block;
-    height: 36px;
-    width: 36px;
-    line-height: 0px;
-    font-size: 0px;
-    cursor: pointer;
-    padding: 0;
-    border-radius: 50%;
-    border: none;
+  position: absolute;
+  top: 50%;
+  z-index: 2;
+  display: block;
+  height: 36px;
+  width: 36px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  padding: 0;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  background: #10a380 url("../images/slider-arrow-active.png") center center no-repeat;
+  &:hover {
     outline: none;
-    background: #10a380 url("../images/slider-arrow-active.png") center center no-repeat;
-    &:hover {
-        outline: none;
-        box-shadow: 0 0 26px 6.76px rgba(13, 162, 126, 0.2)
-    }
+    box-shadow: 0 0 26px 6.76px rgba(13, 162, 126, 0.2)
+  }
 }
-button.slick-next{
-    right: -$atom;
+
+button.slick-next {
+  right: -$atom;
 }
-button.slick-prev{
-    left: -$atom;
+
+button.slick-prev {
+  left: -$atom;
 }
 
 .ourClients {
-    & button.slick-next{
-        top:33%;
-        right: -13px;
-    }
-    & button.slick-prev{
-        top: 33%;
-        left: -13px;
-    }
+  & button.slick-next {
+    top: 33%;
+    right: -13px;
+  }
+  & button.slick-prev {
+    top: 33%;
+    left: -13px;
+  }
 }
 
-.slick-legend{
-    text-align: center;
+.slick-legend {
+  text-align: center;
 }
 
 .slick-legend button.slick-prev.withnums,
 .slick-legend button.slick-next.withnums {
-    position: static;
-    vertical-align: text-top;
-    display: inline-block;
-    height: 24px;
-    width: 24px;
-    background: transparent url("../images/slider-arrow-inactive.png") center center no-repeat;
-    &:hover {
-        box-shadow: none;
-        background: #10a380 url("../images/slider-arrow-active.png") center center no-repeat;
-        outline: none;
-    }
+  position: static;
+  vertical-align: text-top;
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+  background: transparent url("../images/slider-arrow-inactive.png") center center no-repeat;
+  &:hover {
+    box-shadow: none;
+    background: #10a380 url("../images/slider-arrow-active.png") center center no-repeat;
+    outline: none;
+  }
 }
 
 .slick-prev {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .slick-next {
 }
 
-.slick-prev .withnums{
+.slick-prev .withnums {
 
 }
 
 /* Dots */
 
 .slick-dotted.slick-slider {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
-.slick-legend .slick-dots{
-    position: static;
+.slick-legend .slick-dots {
+  position: static;
+  display: inline-block;
+  width: auto;
+  vertical-align: middle;
+}
+
+ul.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  li {
+    position: relative;
     display: inline-block;
-    width: auto;
+    height: 20px;
+    width: 20px;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer;
     vertical-align: middle;
+    &:before {
+      display: none;
+    }
+    a {
+      font-family: OpenSansItalic;
+      font-weight: 600;
+      color: #555555;
+      font-size: 16px;
+      display: block;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      transition: all 0.5s;
+      &:hover {
+        background-color: #11b78f;
+        color: #ffffff;
+      }
+    }
+    button {
+      font-family: OpenSansItalic;
+      font-weight: 600;
+      color: #555555;
+      font-size: 16px;
+      display: block;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      background: transparent;
+      transition: all 0.5s;
+      border: 0;
+      outline: none;
+      cursor: pointer;
+      &:hover {
+        outline: none;
+        background-color: #11b78f;
+        color: #ffffff;
+      }
+    }
+    &.slick-active button {
+      color: #ffffff;
+      background-color: #11b78f;
+    }
+  }
 }
 
-.slick-dots {
-    position: absolute;
-    bottom: -25px;
-    list-style: none;
-    display: block;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    li {
-        position: relative;
-        display: inline-block;
-        height: 20px;
-        width: 20px;
-        margin: 0 5px;
-        padding: 0;
-        cursor: pointer;
-        vertical-align: middle;
-        a{
-            font-family: OpenSansItalic;
-            font-weight: 600;
-            color:  #555555;
-            font-size: 16px;
-            display: block;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            transition: all 0.5s;
-            &:hover {
-                background-color:  #11b78f;
-                color: #ffffff;
-            }
-        }
-        button {
-            font-family: OpenSansItalic;
-            font-weight: 600;
-            color:  #555555;
-            font-size: 16px;
-            display: block;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            background: transparent;
-            transition: all 0.5s;
-            border: 0;
-            outline: none;
-            cursor: pointer;
-            &:hover {
-                outline: none;
-                background-color:  #11b78f;
-                color: #ffffff;
-            }
-        }
-        &.slick-active button{
-            color: #ffffff;
-            background-color:  #11b78f;
-        }
-    }
-}
