--- a/app/sass/__variables.sass
+++ b/app/sass/__variables.sass
@@ -14,3 +14,9 @@ $nav-tabs-link-hover-border-color: rgba($main-color, .2)
 
 $transition-fade: opacity .3s linear
 
+//select2 fix
+$focus-border-color: $main-color
+$container-focus-border-color: $main-color
+//$container-focus-border-color: rgba($main-color, 0.7)
+//$focus-border-color: rgba($main-color, 0.7)
+$container-height: 150px
