--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -8,12 +8,17 @@
 @import "../../node_modules/bootstrap/scss/nav"
 @import "../../node_modules/bootstrap/scss/transitions"
 
+//select2 for custom select-box
+@import "../../node_modules/select2/src/scss/core"
+@import "__select2-fix"
+
 @import "_fonts"
 @import "_smartgrid"
 @import "__animations"
 @import "__hamburgers"
 @import "../../node_modules/jquery.mmenu/dist/jquery.mmenu.all.css"
 @import "__mmenu"
+
 
 @import "_modal"
 
