--- a/app/sass/__modal.sass
+++ b/app/sass/__modal.sass
@@ -22,15 +22,15 @@
     display: block
     width: calc(100% - 40px)
     padding: 0 20px
-    border-radius: 15px
-    border: 1px solid #808080
+    border-radius: $modal-input-border-radius
+    border: 1px solid $modal-input-border-color
     font-family: OpenSansItalic
     color:  #6b6b6b
     font-size: 16px
     &:hover, &:active
-      border: 1px solid  $main-color
+      border: 1px solid $input-hover-border-color
   &__input
-    height: 45px
+    height: $modal-input-height
     margin-bottom: 13px
   &__textarea
     padding-top: 20px
@@ -38,7 +38,6 @@
   &__body
     position: relative
     padding: 0 30px 30px 30px
-
 
 .modal-content
   .close
