--- a/app/sass/__variables.sass
+++ b/app/sass/__variables.sass
@@ -13,13 +13,13 @@ $nav-tabs-link-hover-border-color: rgba($main-color, .2)
 $transition-fade: opacity .3s linear
 
 
-//form styling
+//form vars
 $input-border-color: lighten($main-color, 10%)
-$input-hover-border-color: darken($main-color, 20%)
+$input-hover-border-color: darken($main-color, 5%)
 $input-border-radius: 5px
 
 
-//select2 fix
+//nice-select vars
 $input-height: 45px
 $gray: $main-color
 $gray_lighter: rgba($main-color, 0.2)
@@ -31,3 +31,4 @@ $input_border_radius: $input-border-radius
 $modal-input-height: 45px
 $modal-input-border-radius: $input-border-radius
 $modal-input-border-color: $input-border-color
+$modal-input-hover-border-color: $input-hover-border-color
