--- a/app/sass/__nice-select-fix.sass
+++ b/app/sass/__nice-select-fix.sass
@@ -1,3 +1,7 @@
 .nice-select
+  @include form-font
+  box-sizing: content-box
+  &:hover
+    border-color: $input-hover-border-color
   .list
     width: 100%
