решить проблему с минификацией, сделать общий стиль для элементов форм для всего сайта с переменными

--- a/app/sass/__nice-select-fix.sass
+++ b/app/sass/__nice-select-fix.sass
@@ -1,7 +1,11 @@
 .nice-select
   @include form-font
   box-sizing: content-box
+  .current
+    display: block
+    overflow: hidden
+  .list
+    left: 0
+    right: 0
   &:hover
     border-color: $input-hover-border-color
-  .list
-    width: 100%
