Smooth scroll + главное меню со скроллом для главной

--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -2134,6 +2134,6 @@ p.price-paragraph
     margin-top: 0 !important
     margin-bottom: 0 !important
     align-self: stretch
-.noUi-pips
-  +xs-block
-    display: none
+//.noUi-pips
+//  +xs-block
+//    display: none
