--- a/app/sass/__nouislider.scss
+++ b/app/sass/__nouislider.scss
@@ -1,5 +1,6 @@
 /*! nouislider - 11.1.0 - 2018-04-02 11:18:13 */
 
+@import "_smartgrid";
 .noUi-target {
   touch-action: none;
   user-select: none;
@@ -173,6 +174,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 
 .noUi-pips {
   @include form-font
+  font-size: 12px;
   box-sizing: border-box;
   * {
     box-sizing: border-box;
@@ -211,6 +213,19 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 
 .noUi-value-horizontal {
   transform: translate(-50%, 20%);
+}
+
+.noUi-value-large:first-child{
+  left: 2% !important;
+}
+
+.noUi-value-large:last-child{
+  @include xs-block {
+    left: 98% !important;
+  }
+  @include xxs-block {
+    left: 96% !important;
+  }
 }
 
 .noUi-rtl .noUi-value-horizontal {
