--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -73,6 +73,7 @@ body
   transition: all 0.5s
   width: 256px
   text-align: center
+  cup
   &_squared
     border-radius: 0px
   &_shadowed
@@ -546,6 +547,7 @@ body
   &__button
     margin-bottom: 63px
     animation: shadowPulse infinite 3s
+    cursor: pointer
     +md-block
       align-self: center
     +xs-block
@@ -990,6 +992,7 @@ body
   &__link
     font-family: OpenSansRegular
     font-size: 16px
+    line-height: 20px
     color: #ffffff
     align-self: center
     transition: all 0.4s
