--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -73,7 +73,7 @@ body
   transition: all 0.5s
   width: 256px
   text-align: center
-  cup
+  cursor: pointer
   &_squared
     border-radius: 0px
   &_shadowed
@@ -1906,7 +1906,7 @@ body
     @extend .review__caption
     @extend .review__text
     padding: 15px 35px 15px 100px
-    margin: 0
+    margin: 20px 0
     background: rgba(0, 0, 0, .05)
     text-align: justify
     &:before
@@ -2096,6 +2096,7 @@ p.price-paragraph
 .calc-order
   display: flex
   flex-wrap: wrap
+  margin: 20px 0
   &__select-container
     +col
     +size(4)
